--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin:2%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.paragraph {
+  border: 2px solid black;
+  border-radius: 10rem;
+  /* border-bottom-right-radius: 25%;
+  border-top-right-radius: 25%; */
+  height: 4rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;  
+  justify-content: center;
+  
+  
+}
+
