--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,24 @@
 body {
-  margin:2%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  margin: 2%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .paragraph {
   border: 2px solid black;
-  border-radius: 10rem;  
-  height: 4rem;
+  border-radius: 10rem;
+  height: 2rem;
   text-align: center;
   display: flex;
-  flex-direction: column;  
-  justify-content: center;  
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
