--- a/src/index.css
+++ b/src/index.css
@@ -12,23 +12,13 @@ code {
     monospace;
 }
 
-/* .paragraph {
-  border: 2px solid black;
-  border-radius: 10rem;
-  height: 2rem;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.btn {
+  display: inline-block;
   margin-bottom: 2rem;
-} */
-
-.btn {display: inline-block;
-margin-bottom: 4rem;
-width: 50%;
-height: 4rem;
-cursor: pointer;
-font-weight: 800;
-border-radius: 3px;
-padding: 12px 24px;}
-
+  width: 50%;
+  height: 4rem;
+  cursor: pointer;
+  font-weight: 800;
+  border-radius: 100px;
+  padding: 12px 24px;
+}
