--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.btn {
+.scene-btn {
   display: inline-block;
   margin-bottom: 2rem;
   width: 50%;
@@ -21,4 +21,26 @@ code {
   font-weight: 800;
   border-radius: 100px;
   padding: 12px 24px;
+}
+
+.welcome-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  flex-direction: column;
+}
+
+.intro-msg {
+  text-align: center;
+}
+
+.welcome-btn {
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
 }
